Add support for XPath and JQ in dashboard